# kyozi

./: .gitignore  CMakeLists.txt  README.md  config.yaml  debug_view.py  package.xml  setup.py  summarize.py  train.py  utils.py
.github/workflows/: main.yaml
config/: pr2_rarm.yaml
kyozi/: __init__.py  debug.py  export_to_mimic.py  initialize.py  pr2_manequine.py  replay.py  rosbag_saver.py  save_scene.py  summarize.py  teach.py  utils.py
launch/: reproduce.launch
personal/: migrate_from_mimic.py  mimic_replay.py
scripts/: debug.py  export_to_mimic.py  initialize.py  summarize.py  teach.py  utils.py
