<?xml version="1.0"?>
<package format="2">
  <name>ros_data_collection</name>
  <version>0.0.0</version>
  <description>The ros_data_collection package</description>

  <maintainer email="h-ishida@todo.todo">h-ishida</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
